--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "immutable": "^4.0.0-rc.12",
     "jest-styled-components": "^7.0.3",
     "lodash": "^4.17.21",
-    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^16.12.0",
@@ -27,6 +26,7 @@
     "redux-form": "^8.3.7",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.44.0",
     "styled-components": "^5.0.1"
   },
   "scripts": {
